# KoL

./: README.md  ai_selection.py  dip_client.py  log.json  main.py  pyproject.toml  requirements.txt  timer.py  ui.py
output_reden/: reden.txt
txt/: beispiel.txt
