[tool.poetry]
name = "kol-project"
version = "0.1.0"
description = "KoL_Project | Gerda Taro Gymnasium | Klasse 10 | Friedrich Grabner | 2024/2025"
authors = ["Fritz <friedrichgrabner09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
pgpt-python = "^0.1.2"
pypdf2 = "^3.0.1"
reportlab = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
