[tool.poetry]
name = "dip-api-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["**"]
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
